Split deps checks

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,10 @@ jobs:
           version: ${{ matrix.racket-version }}
       - name: Installing packages and their dependencies
         run: raco pkg install --no-docs --auto --link smalltalk-reader smalltalk-parser
-      - name: Compiling packages and their docs
-        run: raco setup --check-pkg-deps --unused-pkg-deps --pkgs smalltalk-reader smalltalk-parser
+      - name: Compiling smalltalk-reader and its docs
+        run: raco setup --check-pkg-deps --unused-pkg-deps --pkgs smalltalk-reader
+      - name: Compiling smalltalk-parser and its docs
+        run: raco setup --check-pkg-deps --unused-pkg-deps --pkgs smalltalk-parser
       - name: Testing packages
         run: raco test -xt -p smalltalk-reader smalltalk-parser
 
