--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        racket-version: ["8.1", "8.2", "stable", "current"]
+        racket-version: ["8.1", "8.2", "pre-release", "stable", "current"]
         racket-variant: ["BC", "CS"]
     steps:
       - uses: actions/checkout@v2
